hphp/hack/test/pocket_universes/naming/not_in_class.bad.php.exp
File "not_in_class.bad.php", line 6, characters 11-13:
Pocket Universe `E` is defined outside a class (`Foo`) (Naming[2107])
