hphp/hack/test/pocket_universes/naming/not_in_class.bad.php
<?hh // strict
<<file:__EnableUnstableFeatures(
    'pocket_universes',
)>>

interface Foo {
  enum E {
    case string name;

    :@A(
      name = "A"
    );
  }
}
